--- a/cubing/projects/exec-trainer/style.css
+++ b/cubing/projects/exec-trainer/style.css
@@ -10,6 +10,7 @@ body, html {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    padding-top: 5px;
 
 }
 .container_child{
@@ -24,3 +25,4 @@ body, html {
   background-color: green;
 
 }
+.
